--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!-- Press -->
 
-  <section class="colored section" id="press">
+  <section id="press">
     <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-image" src="images/tnw.png" alt="tnw-logo">
     <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
